--- a/requirements.txt
+++ b/requirements.txt
@@ -9,3 +9,12 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 dnspython==2.4.2
 blinker==1.7.0
+Flask-WTF==1.2.1
+WTForms==3.1.1
+Flask-Mail==0.9.1
+Pillow==10.1.0
+bcrypt==4.1.1
+Flask-Session==0.5.0
+gunicorn==21.2.0
+requests==2.31.0
+python-dateutil==2.8.2
